--- a/server/libexec/README
+++ b/server/libexec/README
@@ -1,40 +1,41 @@
-Hooray, you've successfully checked out the framework.
+Hooray, you've successfully checked out Deltacloud Core.
 
-Now you need to check out a driver or two alongside it.
+You can find more documentation at the Deltacloud web site at
+http://deltacloud.org/
 
-Might as well go ahead and check everything out, so you end up with:
+Prerequisites
+-------------
 
-  deltacloud/
-    framework/
-    driver-ec2/
-    driver-rhevm/
-    driver-mock/
-    client-ruby/
+Deltacloud Core depends on a number of other Ruby libraries. The easiest
+way to install them is to either install the deltacloud-core package from
+your distribution's repository, e.g. 'yum install deltacloud-core' on
+Fedora, or install the gem with 'gem install deltacloud-core'.
 
-We're going to assume you're using the mock driver, though.
+If you don't want to do that, have a look at the dependencies in the gem
+spec for deltacloud-core and install them manually.
 
-In deltacloud-framework/config/environment.rb, near the bottom, ensure it says
+Running
+-------
 
-	DEFAULT_DRIVER=:mock
+To get started, run './bin/deltacloudd -i mock'; this will run Deltacloud
+Core with the mock driver, a driver that doesn't talk to a cloud, but
+simulates being one. It will store data about its instances etc. in
+/var/tmp/deltacloud-mock-$USER; that directory will automatically populated
+with sample data if it does not exist. Subsequent runs will continue using
+the data found there. If you need to start over from scratch, just delete
+that directory and restart deltacloudd.
 
-In client-ruby/ run "rake fixtures" to install some mock test data. Note that you will need to rspec ruby gem installed before doing this.
+Once you have the server running, point your browser at
+http://localhost:3000/ to get a HTML version of Deltacloud Core. If you
+want to look at the XML that REST clients will see, simply append '.xml' to
+URL's. Deltacloud Core does content negotiation; REST clients should not
+append '.xml' to URL's, they should simply set the Accept header
+appropriately.
 
-Back in framework/, run it like a normal rails app.  If you have other
-rails apps running, just pick another port
+Some operations require authentication. For the mock driver, the username
+and password are 'mockuser' and 'mockpassword'. A current list of drivers
+and what kind of credentials they need can be found at
+http://deltacloud.org/drivers.html.
 
-    ./script/server             # implies port 3000
-    ./script/server -p 3001     # runs on port 3001
-
-To sanity-check, you can run the client specs from client-ruby/
-
-	rake spec
-
-If you're running the framework on not-localhost or not-port-3000, you can use
-environment variables to point the specs at the right place
-
-	API_PORT=3001 rake spec
-
-	API_HOST=laptop.local rake spec
-
-The specs in client-ruby/specs/**_spec.rb are useful examples of how 
-to use the client.
+Happy hacking - and don't forget to send patches to the mailing list (see
+https://fedorahosted.org/mailman/listinfo/deltacloud-devel)
